--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Chandrika Deb</title>
+        <title>Riya Mehta</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/hearts.png" type="image/x-icon" />
@@ -137,11 +137,7 @@
                                     var timeSpan = ["May 2018 - June 2018", "May 2019 - June 2019",
                                         "Feb 2019 - March 2019", "March 2020 - Present"
                                     ];
-                                    var AT = ["Xavier Institute Of Management (XLRI), Jamshedpur",
-                                        "Central Coalfields Limited (CCL), Ranchi",
-                                        "Technical Head, Utthaan-2019 (Annual techno-cultural fest) at BIT Mesra",
-                                        "Girlscript Summer of Code 2020 - Participant"
-                                    ];
+                                   
                                     var internType = ["Research Intern", "Systems Department Intern", "Lead Volunteer",
                                         "Open Source Contributor"
                                     ];
