--- a/web_projects/index3.html
+++ b/web_projects/index3.html
@@ -24,10 +24,8 @@
             <h2>Chandrika Deb</h2>
             <p style="color:#fff;">Web Developer | ML Enthusiast</p>
             <div class="icon-row">
-                <a href="https://github.com/chandrikadeb7"><i class="fa fa-github"></i></a>
-                <a href="https://medium.com/@chandrikadeb7"><i class="fa fa-medium"></i></a>
-                <a href="https://www.linkedin.com/in/chandrika-deb/"><i class="fa fa-linkedin"></i></a>
-                <a href="https://twitter.com/chandrikadeb7"><i class="fa fa-twitter"></i></a>
+               <a href="https://www.facebook.com/riy.mehta.5"><i class="fa fa-facebook"></i></a>
+                    <a href="mailto:riyamehta2095.rm@gmail.com"><i class="fa fa-envelope"></i></a>
             </div>
         </div>
     </div>
@@ -123,12 +121,8 @@
             </div>
             <div class="fixed-content">
                 <div class="icon-row blue">
-                    <a href="https://twitter.com/chandrikadeb7"><i class="fa fa-twitter"></i></a>
-                    <a href="https://www.facebook.com/chandrika17deb/"><i class="fa fa-facebook"></i></a>
-                    <a href="mailto:chandrikadeb7@gmail.com"><i class="fa fa-envelope"></i><a/a> <a
-                            href="https://stackoverflow.com/users/11589082/chandrika-deb"><i
-                                class="fa fa-stack-overflow"></i></a>
-                        <a href="https://www.instagram.com/___cd.___/?hl=en"><i class="fa fa-instagram"></i></a>
+                     <a href="https://www.facebook.com/riy.mehta.5"><i class="fa fa-facebook"></i></a>
+                    <a href="mailto:riyamehta2095.rm@gmail.com"><i class="fa fa-envelope"></i></a>
                 </div>
                 <p></p>
                 <i class="fa fa-chevron-up black" style="color:#000;"
