--- a/web_projects/index.html
+++ b/web_projects/index.html
@@ -26,10 +26,10 @@
                 <h2>Riya Mehta</h2>
                 <p style="color:#fff;">Web Developer | ML Enthusiast</p>
                 <div class="icon-row">
-                    <a href="https://github.com/21-ri"><i class="fa fa-github"></i></a>
-                    <a href="https://www.youtube.com/channel/UCoXu9qyuPBVsBDLr-6SK8CA"><i class="fa fa-medium"></i></a>
-                    <a href="https://www.linkedin.com/in/riya-mehtap"><i class="fa fa-linkedin"></i></a>
-                    
+                    <a href="https://github.com/chandrikadeb7"><i class="fa fa-github"></i></a>
+                    <a href="https://medium.com/@chandrikadeb7"><i class="fa fa-medium"></i></a>
+                    <a href="https://www.linkedin.com/in/chandrika-deb/"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://twitter.com/chandrikadeb7"><i class="fa fa-twitter"></i></a>
                 </div>
             </div>
         </div>
@@ -146,11 +146,9 @@
             </div>
             <div class="fixed-content">
                 <div class="icon-row blue">
-                     <a href="https://www.facebook.com/riy.mehta.5"><i class="fa fa-facebook"></i></a>
-                    <a href="mailto:riyamehta2095.rm@gmail.com"><i class="fa fa-envelope"></i><a/a> <a
-                            href="https://stackoverflow.com/users/11589082/chandrika-deb"><i
-                                class="fa fa-stack-overflow"></i></a>
-                </div>
+                   <a href="https://www.facebook.com/riy.mehta.5"><i class="fa fa-facebook"></i></a>
+                    <a href="mailto:riyamehta2095.rm@gmail.com"><i class="fa fa-envelope"></i></a>
+                                </div>
                 <p></p>
                 <i class="fa fa-chevron-up black" style="color:#000;"
                     onclick="window.scroll({  top: 0,  left: 0,  behavior: 'smooth'});"></i>
