--- a/web_projects/index3.html
+++ b/web_projects/index3.html
@@ -21,11 +21,12 @@
 	<div class="header">
         <div class="fixed-content">
             <img class="port" src="../img/pic01.jpg">
-            <h2>Chandrika Deb</h2>
+            <h2>Riya Mehta</h2>
             <p style="color:#fff;">Web Developer | ML Enthusiast</p>
             <div class="icon-row">
-               <a href="https://www.facebook.com/riy.mehta.5"><i class="fa fa-facebook"></i></a>
-                    <a href="mailto:riyamehta2095.rm@gmail.com"><i class="fa fa-envelope"></i></a>
+                 <a href="https://github.com/21-ri"><i class="fa fa-github"></i></a>
+                    <a href="https://www.youtube.com/channel/UCoXu9qyuPBVsBDLr-6SK8CA"><i class="fa fa-medium"></i></a>
+                    <a href="https://www.linkedin.com/in/riya-mehtap"><i class="fa fa-linkedin"></i></a>
             </div>
         </div>
     </div>
@@ -121,8 +122,8 @@
             </div>
             <div class="fixed-content">
                 <div class="icon-row blue">
-                     <a href="https://www.facebook.com/riy.mehta.5"><i class="fa fa-facebook"></i></a>
-                    <a href="mailto:riyamehta2095.rm@gmail.com"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.facebook.com/riy.mehta.5"><i class="fa fa-facebook"></i></a>
+                    <a href="mailto:riyamehta2095.rm@gmail.com"><i class="fa fa-envelope"></i></a>     
                 </div>
                 <p></p>
                 <i class="fa fa-chevron-up black" style="color:#000;"
