--- a/index.html
+++ b/index.html
@@ -134,14 +134,11 @@
                         <div class="col-md-12">
                             <div class="timeline-centered">
                                 <script type="text/javascript">
-                                    var timeSpan = ["May 2018 - June 2018", "May 2019 - June 2019",
+                                    var timeSpan = ["May 2017 - June 2017", "May 2018 - June 2018",
                                         "Feb 2019 - March 2019", "March 2020 - Present"
                                     ];
-                                    var AT = ["Xavier Institute Of Management (XLRI), Jamshedpur",
-                                        "Central Coalfields Limited (CCL), Ranchi",
-                                        "Technical Head, Utthaan-2019 (Annual techno-cultural fest) at BIT Mesra",
-                                        "Girlscript Summer of Code 2020 - Participant"
-                                    ];
+                                    
+                                  
                                     var internType = ["Research Intern", "Systems Department Intern", "Lead Volunteer",
                                         "Open Source Contributor"
                                     ];
@@ -207,15 +204,13 @@
                             var ppDomains = [
                                 "Covid-19 helpdesk for tracking moderate and high risk patients around us along with online doctor portal.",
                                 "A real time face recognition system developed in Python using Pillow, OpenCV and NumPy",
-                                "Guided by Prof. Neena Jha, Computer Science and Engineering, BIT Mesra.  A Chabot based social networking website dedicated for the students of BIT Deoghar for an independent and effective communication platform along with a Chabot having a text-based user interface for quick responses to institute related queries.",
-                                "It is a simple eCommerce website highlighting inventory management and is based on PHP and MySQL with easy HTML5 and CSS3 for website rendering.",
-                                "Guided by Prof. Kamta Nath Mishra, Head Of Department, Computer Science and Engineering, BIT Mesra. Java Swing based project with MySQL database developed using Netbeans IDE"
-                            ];
-                            var urls = ["https://github.com/chandrikadeb7/Covid-19-HelpDesk",
-                                "https://github.com/chandrikadeb7/Face-Recognition-in-Python",
-                                "https://github.com/chandrikadeb7/Chatbot-based-Social-Networking-Website",
-                                "https://github.com/chandrikadeb7/MyOnlineStore",
-                                "https://github.com/chandrikadeb7/StudentManagementSystem"
+                                "Guided by Prof.Fateme Dinmohammadi ,Artificial Intelligence, University of west london , United Kingdom. It predict future events through a sequence of time . ",
+                                "It is a simple eCommerce website is based on PHP and MySQL with easy HTML5 and CSS3 for website rendering.",
+                                                           ];
+                            var urls = ["https://github.com/21-ri/covid19.git",
+                                "https://github.com/21-ri/Face-Recognition-using-Python.git",
+                                "https://github.com/21-ri/Time-Series-Forecasting-.git",
+                                "https://github.com/Parth-5858/secondhand_stuff.git",
                             ];
                             var icons = ["ambulance", "camera", "comment", "rupee", "user"];
                             for (let i = 0; i < domains.length; i++) {
