--- a/web_projects/index3.html
+++ b/web_projects/index3.html
@@ -42,7 +42,7 @@
     <div class="colorlib-narrow-content">
         <div class="row">
             <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInRight" align="center">
-                <h2>Codes by ME! (Will be updated soon...)</h2>
+                <h2>Code by ME !</h2>
                 <hr>
             </div>
         </div>
@@ -51,12 +51,12 @@
                 <div class="col-md-12">
                     <div class="timeline-centered">
                     <script type="text/javascript">
-                        var timeSpan = ["Dec 2019"];
-                        var AT = ["Tic Tac Toe"];
+                        var timeSpan = ["January 2024 - February 2024"];
+                        var AT = ["Ecommerce-Website"];
                         var internType = ["Personal Project"];
-                        var descriptions = ["A simple Tic-Tac-Toe game developed using Python using random and sys Python modules"];
-                        var iclass = ["play"];
-                        var urls = ["https://github.com/chandrikadeb7/TicTacToe"];
+                        var descriptions = ["A simple Ecommerce-Website developed using html , css javascript"];
+                        var iclass = ["Shop"];
+                        var urls = ["https://github.com/21-ri/Ecommerce-Website.git"];
                         var color = [5, 1, 2];
                         for (let i = 0; i < AT.length; i++) {
                             var dir = (i % 2 == 0) ? "Right" : "Left";
