--- a/web_projects/index4.html
+++ b/web_projects/index4.html
@@ -52,16 +52,16 @@
                         <div class="col-md-12">
                             <div class="timeline-centered">
                                 <script type="text/javascript">
-                                    var timeSpan = ["Dec 2019 - Jan 2020", "Feb 2020 - Present"];
-                                    var AT = ["Face Recognition in Python", "Face Mask Detection"]
+                                    var timeSpan = ["Feb - Jul 2023", "Aug 2023 - Octo 2023"];
+                                    var AT = ["Face Recognition in Python", "Time Series-Forecasting"]
                                     var internType = ["Personal Project", "Major Project (8th semester)"];
                                     var descriptions = [
                                         "A real time face recognition system developed in Python using Pillow, OpenCV and NumPy",
-                                        "Face mask detection system using Deep learning. Under the guidance of Prof. A.K. Choudhary, Faculty, BIT Mesra."
+                                        "Time Series-Forecasting using datascience . Under the guidance of Prof.Fateme Dinmohammadi,Artificial Intelligence Faculty, University of West London."
                                     ];
-                                    var iclass = ["camera", "search"];
-                                    var urls = ["https://github.com/chandrikadeb7/Face-Recognition-in-Python",
-                                        "https://github.com/chandrikadeb7/Face-Mask-Detection"
+                                    var iclass = ["camera", "graph"];
+                                    var urls = ["https://github.com/21-ri/Face-Recognition-using-Python.git",
+                                        "https://github.com/21-ri/Time-Series-Forecasting-.git"
                                     ];
                                     var color = [5, 1, 2];
                                     for (let i = 0; i < AT.length; i++) {
