--- a/web_projects/index2.html
+++ b/web_projects/index2.html
@@ -55,23 +55,17 @@
                         <div class="col-md-12">
                             <div class="timeline-centered">
                                 <script type="text/javascript">
-                                    var timeSpan = ["April 2019 - Present", "Feb 2020 - March 2020",
+                                    var timeSpan = ["December 2024 - January 2024",
                                         "May 2019 - Dec 2019", "Feb 2020 - Present"
                                     ];
-                                    var AT = ["IBM-Cognitiveclass-Python_for_Data_Science",
-                                        "IBM_CognitiveClass.ai_How-to-Build-Chatbots",
-                                        "Coursera Machine Learning course by Stanford University",
-                                        "Coursera_IBM_Data_Science_Professional_Certificate"
+                                    var AT = ["Linkedin PowerBI"
                                     ]
-                                    var internType = ["Check Solutions", "Check Solutions", "Check Solutions",
-                                        "Check Solutions"
+                                    var internType = ["Check Solutions", 
+                                       
                                     ];
-                                    var iclass = ["eye", "gear", "key", "search"];
+                                    var iclass = ["key", "search"];
                                     var urls = [
-                                        "https://github.com/chandrikadeb7/IBM-Cognitiveclass-Python_for_Data_Science",
-                                        "https://github.com/chandrikadeb7/IBM_CognitiveClass.ai_How-to-Build-Chatbots",
-                                        "https://github.com/chandrikadeb7/Coursera_Machine_Learning",
-                                        "https://github.com/chandrikadeb7/Coursera_IBM_Data_Science_Professional_Certificate"
+                                        "https://www.linkedin.com/posts/riya-mehtap_certificate-of-completion-activity-7158096088837623810-q6ye?utm_source=share&utm_medium=member_desktop"
                                     ];
                                     var color = [5, 1, 2];
                                     for (let i = 0; i < AT.length; i++) {
