--- a/web_projects/index4.html
+++ b/web_projects/index4.html
@@ -52,14 +52,14 @@
                         <div class="col-md-12">
                             <div class="timeline-centered">
                                 <script type="text/javascript">
-                                    var timeSpan = ["Feb - Jul 2023", "Aug 2023 - Octo 2023"];
+                                    var timeSpan = ["Nov 2022 - Jan 2022", "Aug 2023 - Octo 2023"];
                                     var AT = ["Face Recognition in Python", "Time Series-Forecasting"]
                                     var internType = ["Personal Project", "Major Project (8th semester)"];
                                     var descriptions = [
                                         "A real time face recognition system developed in Python using Pillow, OpenCV and NumPy",
                                         "Time Series-Forecasting using datascience . Under the guidance of Prof.Fateme Dinmohammadi,Artificial Intelligence Faculty, University of West London."
                                     ];
-                                    var iclass = ["camera", "graph"];
+                                    var iclass = ["camera", " code"];
                                     var urls = ["https://github.com/21-ri/Face-Recognition-using-Python.git",
                                         "https://github.com/21-ri/Time-Series-Forecasting-.git"
                                     ];
