--- a/web_projects/index.html
+++ b/web_projects/index.html
@@ -1,159 +1,118 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Web Projects</title>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/star.png" type="image/x-icon" />
-        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Indie+Flower'>
-        <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
-        <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href='../css/web_projects.css'>
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="../css/services.css">
-        <link rel="stylesheet" href="../css/animate.css">
-        <link rel="stylesheet" href="../css/flexslider.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Web Projects</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/star.png" type="image/x-icon" />
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Indie+Flower'>
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/web_projects.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/services.css">
+    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="../css/flexslider.css">
+</head>
 
-    <body>
-        <div class="header">
-            <div class="fixed-content">
-                <img class="port" src="img/img1.JPG">
-                <h2>Riya Mehta</h2>
-                <p style="color:#fff;">Web Developer | ML Enthusiast</p>
-                <div class="icon-row">
-                    <a href="https://github.com/chandrikadeb7"><i class="fa fa-github"></i></a>
-                    <a href="https://medium.com/@chandrikadeb7"><i class="fa fa-medium"></i></a>
-                    <a href="https://www.linkedin.com/in/chandrika-deb/"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://twitter.com/chandrikadeb7"><i class="fa fa-twitter"></i></a>
+<body>
+    <div class="header">
+        <div class="fixed-content">
+            <img class="port" src="img/img1.JPG">
+            <h2>Riya Mehta</h2>
+            <p style="color:#fff;">Web Developer | ML Enthusiast</p>
+            <div class="icon-row">
+                <a href="https://github.com/21-ri"><i class="fa fa-github"></i></a>
+                <a href="https://www.youtube.com/channel/UCoXu9qyuPBVsBDLr-6SK8CA"><i class="fa fa-medium"></i></a>
+                <a href="https://www.linkedin.com/in/riya-mehtap"><i class="fa fa-linkedin"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="second">
+        <div class="fixed-content">
+            <h1>Projects</h1>
+            <p>Here are some of my web development projects.</p>
+        </div>
+    </div>
+
+    <!-- ****************************************PROJECT START***************************************************************  -->
+    <section class="colorlib-experience" data-section="experience">
+        <div class="colorlib-narrow-content">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                    <h2>Web Development Projects</h2>
+                    <hr>
                 </div>
             </div>
-        </div>
-        <div class="second">
-            <div class="fixed-content">
-                <h1>Projects</h1>
-                <p>Here are some of my web development projects.</p>
-            </div>
-        </div>
-
-        <!-- ****************************************PROJECT START***************************************************************  -->
-        <section class="colorlib-experience" data-section="experience">
-            <div class="colorlib-narrow-content">
+            <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                        <h2>Web Development Projects</h2>
-                        <hr>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="timeline-centered">
-                                <script type="text/javascript">
-                                    var timeSpan = ["March 2020 - Present", "Feb 2020 - March 2020",
-                                        "Sept 2019 - Dec 2019", "May 2019 - June 2019", "Jan 2019 - April 2019"
-                                    ];
-                                    var AT = ["Covid-19-HelpDesk", "Covid-Risk-Assessment-Calculator",
-                                        "Chatbot-based-Social-Networking-Website", "My Online Store",
-                                        "Student Management System"
-                                    ];
-                                    var internType = ["Personal Project", "Personal Project",
-                                        "Minor Project (7th Semester)", "Intern Project",
-                                        "6th Semester Software Engineering Course Project"
-                                    ];
-                                    var descriptions = [
-                                        "Covid-19 helpdesk for tracking moderate and high risk patients around us along with online doctor portal.",
-                                        "Covid-19 Risk Assessment Scanner inspired by Apollo 24/7 Covid Chatbot",
-                                        "Guided by Prof. Neena Jha, Computer Science and Engineering, BIT Mesra.  A Chabot based social networking website dedicated for the students of BIT Deoghar for an independent and effective communication platform along with a Chabot having a text-based user interface for quick responses to institute related queries.",
-                                        "It is a simple eCommerce website highlighting inventory management and is based on PHP and MySQL with easy HTML5 and CSS3 for website rendering.",
-                                        "Guided by Prof. Kamta Nath Mishra, Head Of Department, Computer Science and Engineering, BIT Mesra. Java Swing based project with MySQL database developed using Netbeans IDE"
-                                    ];
-                                    var iclass = ["ambulance", "hourglass", "comment", "cart-plus", "user"];
-                                    var urls = ["https://github.com/chandrikadeb7/Covid-19-HelpDesk",
-                                        "https://github.com/chandrikadeb7/Covid-Risk-Assessment-Calculator",
-                                        "https://github.com/chandrikadeb7/Chatbot-based-Social-Networking-Website",
-                                        "https://github.com/chandrikadeb7/MyOnlineStore",
-                                        "https://github.com/chandrikadeb7/StudentManagementSystem"
-                                    ];
-                                    var color = [5, 1, 2];
-                                    for (let i = 0; i < AT.length; i++) {
-                                        var dir = (i % 2 == 0) ? "Right" : "Left";
-                                        document.write(
-                                            '<article class="timeline-entry animate-box" data-animate-effect="fadeIn' +
-                                            dir + '">\
-                                    <div class="timeline-entry-inner">\
-                                        <div class="timeline-icon color-' + color[i] + '">\
-                                            <i class="fa fa-' + iclass[i] + '"></i>\
-                                        </div>\
-                                        <div class="timeline-label">\
-                                            <h2><a href="' + urls[i] + '">' + AT[i] + '</a> <span>' + timeSpan[i] + '</span></h2>\
-                                            <p><strong><a href="' + urls[i] + '">' + internType[i] + '</a></strong>\
-                                                <br> ' + descriptions[i] + '</p>\
-                                            <p></p>\
-                                        </div>\
-                                    </div>\
-                                </article>');
-                                    }
+                    <div class="col-md-12">
+                        <div class="timeline-centered">
+                            <script type="text/javascript">
+                                var timeSpan = ["May 2018 - June 2018", "Aug 2018 - Nov 2018",
+                                    "Feb 2019 - March 2019", "Nov 2022 - Jan 2022", "Aug 2023 - Oct 2023",
+                                    "Nov 2023 - Dec 2023"
+                                ];
+                                var AT = ["Wordpress Project",
+                                    "Online Theatre Ticket System",
+                                    "Covid-19-HelpDesk",
+                                    "Face-Recognition-using-Python",
+                                    "A real-time Forecasting",
+                                    "ECommerce website development"
 
-                                </script>
-                                <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
-                                    <div class="timeline-entry-inner">
-                                        <div class="timeline-icon color-3">
-                                        </div>
-                                    </div>
-                                </article>
-                            </div>
+                                ];
+
+                                var descriptions = [
+                                    "Project on developing eCommerce website using Wordpress.",
+                                    "Online ticket booking system using html, css, and javascript.",
+                                    "Covid-19 helpdesk for tracking moderate and high-risk patients around us along with online doctor portal.",
+                                    "A real-time face recognition system developed in Python using Pillow, OpenCV, and NumPy",
+                                    "Guided by Prof. Fateme Dinmohammadi, Artificial Intelligence, University of West London, United Kingdom. It predicts future events through a sequence of time.",
+                                    "It is a simple eCommerce website based on PHP and MySQL with easy HTML5 and CSS3 for website rendering."
+                                ];
+                                var iclass = ["code", "user", "ambulance", "camera", "code", "user"];
+                                var urls = ["https://github.com/21-ri/Spd-Sales--wordpress.git",
+                                    "https://github.com/21-ri/OnlineTheatreTicketSystem.git",
+                                    "https://github.com/21-ri/covid19.git",
+                                    "https://github.com/21-ri/Face-Recognition-using-Python.git",
+                                    "https://github.com/21-ri/Time-Series-Forecasting-.git"
+                                ];
+                                var color = [5, 1, 2, 4, 3];
+                                for (let i = 0; i < AT.length; i++) {
+                                    var dir = (i % 2 == 0) ? "Right" : "Left";
+                                    document.write(
+                                        '<article class="timeline-entry animate-box" data-animate-effect="fadeIn' +
+                                        dir + '">\
+                                <div class="timeline-entry-inner">\
+                                    <div class="timeline-icon color-' + color[i] + '">\
+                                        <i class="fa fa-' + iclass[i] + '"></i>\
+                                    </div>\
+                                    <div class="timeline-label">\
+                                        <h2><a href="' + urls[i] + '">' + AT[i] + '</a> <span>' + timeSpan[i] + '</span></h2>\
+                                        <p><strong><a href="' + urls[i] + '">' + timeSpan[i] + '</a></strong>\
+                                            <br> ' + descriptions[i] + '</p>\
+                                        <p></p>\
+                                    </div>\
+                                </div>\
+                            </article>');
+                                }
+                            </script>
                         </div>
                     </div>
                 </div>
-                <div>
-        </section>
-        <!-- ****************************************PROJECT END****************************************************************  -->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-        </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-        </script>
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-        <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js'></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-        <script src="../js/jquery.easing.1.3.js"></script>
-        <script src="../js/jquery.waypoints.min.js"></script>
-        <script src="../js/jquery.flexslider-min.js"></script>
-        <script src="../js/owl.carousel.min.js"></script>
-        <script src="../js/jquery.countTo.js"></script>
-        <script src="../js/services.js"></script>
-        <script src="../js/modernizr-2.6.2.min.js"></script>
-        <script src="../js/script.js"></script>
-        <div class="footer">
-            <div class="second">
-                <div class="fixed-content">
-                    <h1>Contact Me</h1>
-                </div>
-            </div>
-            <div class="fixed-content">
-                <div class="icon-row blue">
-                   <a href="https://www.facebook.com/riy.mehta.5"><i class="fa fa-facebook"></i></a>
-                    <a href="mailto:riyamehta2095.rm@gmail.com"><i class="fa fa-envelope"></i></a>
-                                </div>
-                <p></p>
-                <i class="fa fa-chevron-up black" style="color:#000;"
-                    onclick="window.scroll({  top: 0,  left: 0,  behavior: 'smooth'});"></i>
             </div>
         </div>
-    </body>
-
+    </section>
+    <!-- ****************************************PROJECT END****************************************************************  -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js
+</body>
 </html>
