--- a/web_projects/index.html
+++ b/web_projects/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="header">
         <div class="fixed-content">
-            <img class="port" src="por/img/img1.JPG">
+            <img class="port" src=" ">
             <h2>Riya Mehta</h2>
             <p style="color:#fff;">Web Developer | ML Enthusiast</p>
             <div class="icon-row">
@@ -39,9 +39,7 @@
             <p>Here are some of my web development projects.</p>
         </div>
     </div>
-
-    <!-- ****************************************PROJECT START***************************************************************  -->
-    <section class="colorlib-experience" data-section="experience">
+   <section class="colorlib-experience" data-section="experience">
         <div class="colorlib-narrow-content">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -108,7 +106,7 @@
             </div>
         </div>
     </section>
-    <!-- ****************************************PROJECT END****************************************************************  -->
+   
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous">
