--- a/web_projects/index3.html
+++ b/web_projects/index3.html
@@ -20,7 +20,7 @@
 <body>
 	<div class="header">
         <div class="fixed-content">
-            <img class="port" src="https://github.com/21-ri/por/blob/main/img/img1.JPG">
+            <img class="port" src="img/img1.JPG">
             <h2>Riya Mehta</h2>
             <p style="color:#fff;">Web Developer | ML Enthusiast</p>
             <div class="icon-row">
